--- a/movie.html
+++ b/movie.html
@@ -14,7 +14,7 @@
     <div class="container">
         <nav class="navbar">
             <ul>
-                <li><a href="landing.html#fave">Go Back</a></li>
+                <li><a href="index.html#fave">Go Back</a></li>
                 <li><a href="books.html">Books</a></li>
                 <li><a href="movie.html">Movies</a></li>
                 <li><a href="tv.html">TV Shows</a></li>
