--- a/tv.html
+++ b/tv.html
@@ -29,70 +29,68 @@
                 <thead>
                     <tr>
                         <th>Title</th>
-                        <th>Starring</th>
-                        <th>Genre/th>
+                        <th>Network</th>
+                        <th>Genre</th>
                         <th>Rating</th>
                     </Tr>
                     </thead>
                     <tbody>
                     <Tr>
-                        <td >Friends</td>
-                        <td >Courtney Cox, Jennifer Anistorn</td>
-                        <td >Sitcom</td>
+                        <td>Friends</td>
+                        <td>NBC</td>
+                        <td>Sitcom</td>
                         <td>&#9989;&#9989;&#9989;&#9989;</td>
                     </Tr>
                     <Tr>
                         <td>Survivor</td>
-                        <td>Jeff Probst</td>
+                        <td>CBS</td>
                         <td>Reality</td>
                         <td>&#9989;&#9989;&#9989;&#9989;&#9989;</td>
                     </Tr>
                     <tr> 
                         <td>Community</td>
-                        <td>Ensemble Cast</td>
+                        <td>NBC</td>
                         <td>Sitcom</td>
                         <td>&#9989;&#9989;&#9989;&#9989;&#9989;</td>
                     </tr>
                     <tr>
                         <td>Rupaul DragRace</td>
-                        <td>Rupaul</td>
+                        <td>Bravo</td>
                         <td>Reality</td>
                         <td>&#9989;&#9989;&#9989;</td>
                     </tr>
                     <tr>
-                        <td>Rupaul DragRace</td>
-                        <td>JK Rowling</td>
-                        <td>Reality</td>
-                        <td>&#9989;&#9989;&#9989;&#9989;&#9989;</td>
+                        <td>Never I Have I Ever</td>
+                        <td> Netflix</td>
+                        <td>Comedy</td>
+                        <td>&#9989;&#9989;</td>
                     </tr>
                     <tr>
                         <td>Suits</td>
-                        <td>Ensemble Cast/td>
+                        <td>AMC</td>
                         <td>Legal Drama</td>
                         <td>&#9989;&#9989;&#9989;&#9989;&#9989;</td>
                     </tr>
                     <tr>
                         <td>Orange is the New Black</td>
-                        <td>Ensemble Cast</td>
-                        <td>Dark Comedy<br>Drama</td>
+                        <td rowspan="3">Netlfix</td>
+                        <td>Dark Comedy</td>
+                        <td>&#9989;&#9989;&#9989;</td>
+                    </tr>
+                    <tr>
+                        <td>Heartstopper</td>
+                        <td>Romantic Comedy</td>
                         <td>&#9989;&#9989;&#9989;&#9989;&#9989;</td>
                     </tr>
                     <tr>
-                        <td>Rupaul DragRace</td>
-                        <td>JK Rowling</td>
-                        <td>Reality</td>
-                        <td>&#9989;&#9989;&#9989;&#9989;&#9989;</td>
+                        <td>Stranger Things</td>
+                        <td>Drama</td>
+                        <td>&#9989;&#9989;&#9989;</td>
                     </tr>
                     <tr>
-                        <td>Rupaul DragRace</td>
-                        <td>JK Rowling</td>
-                        <td>Reality</td>
-                        <td>&#9989;&#9989;&#9989;&#9989;&#9989;</td>
-                    </tr>
-                    <tr>
-                        <td>Rupaul DragRace</td>
-                        <td>JK Rowling</td>
-                        <td>Reality</td>
+                        <td>It's Showtime</td>
+                        <td>ABS-CBN</td>
+                        <td>Variety</td>
                         <td>&#9989;&#9989;&#9989;&#9989;&#9989;</td>
                     </tr>
     
