--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
      <section id="footer">
         <h1>That's All Folks!</h1>
-        <p style="color: #f57c98;">All Rights Reserved</p>
+        <p style="color: #f57c98;">All Rights Reserved 2022</p>
      </section>
 
 </body>
