--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
             <div class="homeDesign">
             <p>This is my very own website that I created from scratch. It helped me learn basic Web Development programming and how I incorporated HTML and CSS together to present my information about myself.</p>
             <br>
-            <p>I created this site with smooth scroll functionality that mirrors today's current trend in website development. It snaps into page whichever section is more prominent. The navigation bar also slides into the section fluidly.</p>
+            <p>I created this site with smooth scroll functionality that mirrors today's current trend in website development.</p>
+            <p></p>It snaps into page whichever section is more prominent. The navigation bar also slides into the section fluidly.</p>
             <br>
+
             <p>This is my submission for Assessment 1 for ICT726 Web Development class.</p>
         </div>
         
