--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <p>I created this site with smooth scroll functionality that mirrors today's current trend in website development.</p>
             <p></p>It snaps into page whichever section is more prominent. The navigation bar also slides into the section fluidly.</p>
             <br>
+            <p>The links in the favorites section redirects you to another page.</p>
 
             <p>This is my submission for Assessment 1 for ICT726 Web Development class.</p>
         </div>
