--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>This is my very own website that I created from scratch. It helped me learn basic Web Development programming and how I incorporated HTML and CSS together to present my information about myself.</p>
             <br>
             <p>I created this site with smooth scroll functionality that mirrors today's current trend in website development.</p>
-            <p></p>It snaps into page whichever section is more prominent. The navigation bar also slides into the section fluidly.</p>
+            <p>It snaps into page whichever section is more prominent. The navigation bar also slides into the section fluidly.</p>
             <br>
             <p>The links in the favorites section redirects you to another page.</p>
 
