--- a/tv.html
+++ b/tv.html
@@ -73,7 +73,7 @@
                     </tr>
                     <tr>
                         <td>Orange is the New Black</td>
-                        <td rowspan="3">Netlfix</td>
+                        <td rowspan="3">Netflix</td>
                         <td>Dark Comedy</td>
                         <td>&#9989;&#9989;&#9989;</td>
                     </tr>
